# effectz_vlm_ocr

./: .env  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: .dockerignore  .env  .gitignore  Dockerfile  main.py  pyproject.toml  startup.sh
backend/app/api/: __init__.py  api_utils.py  file_to_html.py  file_to_json.py  file_to_markdown.py  file_to_xml.py  get_markdown.py  layout_entity_markdown.py  url_to_markdown.py
backend/app/services/: __init__.py  azure_analyzer.py  base_analyzer.py  base_converter.py  base_markdown_converter.py  hf_analyzer.py  ollama_converter.py  ollama_markdown_converter.py  openai_converter.py  openai_markdown_converter.py  url_converter.py
backend/app/utils/: __init__.py  document_utils.py  image_utils.py
frontend/: .dockerignore  .env  .gitignore  Dockerfile  docker-compose.yml  next.config.mjs  package-lock.json  package.json  startup.sh  vite.config.ts
frontend/app/: globals.css  layout.jsx  page.jsx
frontend/components/: file-preview.js  header.jsx
frontend/pages/: _app.js  document.js  index.js
frontend/src/: App.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/file-to-html/: page.tsx
frontend/src/app/file-to-json/: page.tsx
frontend/src/app/file-to-markdown/: page.tsx
frontend/src/app/file-to-xml/: page.tsx
frontend/src/app/url-to-markdown/: page.tsx
frontend/src/components/: FileUploader.tsx  HTMLViewer.tsx  Header.tsx  JSONViewer.tsx  MarkdownViewer.tsx  PdfPreviwer.tsx  XMLViewer.tsx  file-uploader.tsx  index.tsx  pdf-previewer.tsx
(+5 files in other folders)
